@@ -92,6 +92,24 @@ class DailyPlannerGateway extends QueryableGateway
         return $this->db()->select($sql, $data);
     }
 
+    public function selectENFStudentsByClass($gibbonSchoolYearID, $gibbonCourseClassID)
+    {
+        $data = ['gibbonSchoolYearID' => $gibbonSchoolYearID, 'gibbonCourseClassID' => $gibbonCourseClassID];
+        $sql = "SELECT DISTINCT student.gibbonPersonID, student.surname, student.preferredName, student.email, student.image_240
+                FROM gibbonCourseClass
+                JOIN gibbonCourse ON (gibbonCourse.gibbonCourseID=gibbonCourseClass.gibbonCourseID)
+                JOIN gibbonCourseClassPerson ON (gibbonCourseClassPerson.gibbonCourseClassID=gibbonCourseClass.gibbonCourseClassID)
+                JOIN gibbonPerson AS student ON (gibbonCourseClassPerson.gibbonPersonID=student.gibbonPersonID)
+                WHERE gibbonCourse.nameShort LIKE 'ENF%'
+                AND gibbonCourse.gibbonSchoolYearID=:gibbonSchoolYearID 
+                AND gibbonCourseClass.gibbonCourseClassID=:gibbonCourseClassID
+                AND gibbonCourseClassPerson.role='Student'
+                GROUP BY student.gibbonPersonID
+                ORDER BY student.surname, student.preferredName, student.email";
+
+        return $this->db()->select($sql, $data);
+    }
+
     public function selectENFTeachersByStudent($gibbonSchoolYearID, $gibbonPersonIDStudent)
     {
         $data = ['gibbonSchoolYearID' => $gibbonSchoolYearID, 'gibbonPersonIDStudent' => $gibbonPersonIDStudent];
@@ -114,6 +132,19 @@ class DailyPlannerGateway extends QueryableGateway
         return $this->db()->select($sql, $data);
     }
 
+    public function selectAllENFClasses($gibbonSchoolYearID)
+    {
+        $data = ['gibbonSchoolYearID' => $gibbonSchoolYearID];
+        $sql = "SELECT gibbonCourseClass.gibbonCourseClassID as value, CONCAT(gibbonCourse.nameShort, '.', gibbonCourseClass.nameShort) as name
+                FROM gibbonCourseClass 
+                JOIN gibbonCourse ON (gibbonCourse.gibbonCourseID=gibbonCourseClass.gibbonCourseID)
+                WHERE gibbonCourse.nameShort LIKE 'ENF%'
+                AND gibbonCourse.gibbonSchoolYearID=:gibbonSchoolYearID 
+                ORDER BY gibbonCourse.nameShort, gibbonCourseClass.nameShort";
+
+        return $this->db()->select($sql, $data);
+    }
+
     public function getENFClassByStudent($gibbonSchoolYearID, $gibbonPersonIDStudent)
     {
         $data = ['gibbonSchoolYearID' => $gibbonSchoolYearID, 'gibbonPersonIDStudent' => $gibbonPersonIDStudent];
@@ -130,5 +161,16 @@ class DailyPlannerGateway extends QueryableGateway
                 ORDER BY gibbonCourse.nameShort";
 
         return $this->db()->selectOne($sql, $data);
+    }
+
+    public function selectPlannerTasksByEntry($enfPlannerEntryID)
+    {
+        $data = ['enfPlannerEntryID' => $enfPlannerEntryID];
+        $sql = "SELECT enfPlannerTaskID, category, minutes, description, sequenceNumber, timestamp
+                FROM enfPlannerTask
+                WHERE enfPlannerTask.enfPlannerEntryID=:enfPlannerEntryID
+                ORDER BY enfPlannerTask.sequenceNumber";
+
+        return $this->db()->select($sql, $data);
     }
 }
