@@ -1,0 +1,43 @@
+<?php
+/*
+Gibbon, Flexible & Open School System
+Copyright (C) 2010, Ross Parker
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see <http://www.gnu.org/licenses/>.
+*/
+
+namespace Gibbon\Module\EnrichmentandFlow\Domain;
+
+use Gibbon\Domain\Traits\TableAware;
+use Gibbon\Domain\QueryCriteria;
+use Gibbon\Domain\QueryableGateway;
+
+class PlannerTaskGateway extends QueryableGateway
+{
+    use TableAware;
+
+    private static $tableName = 'enfPlannerTask';
+    private static $primaryKey = 'enfPlannerTaskID';
+    private static $searchableColumns = ['category'];
+
+    public function deleteTasksByEntryNotInList($enfPlannerEntryID, $enfPlannerTaskList)
+    {
+        $enfPlannerTaskList = is_array($enfPlannerTaskList) ? implode(',', $enfPlannerTaskList) : $enfPlannerTaskList;
+
+        $data = ['enfPlannerEntryID' => $enfPlannerEntryID, 'enfPlannerTaskList' => $enfPlannerTaskList];
+        $sql = "DELETE FROM enfPlannerTask WHERE enfPlannerEntryID=:enfPlannerEntryID AND NOT FIND_IN_SET(enfPlannerTaskID, :enfPlannerTaskList)";
+
+        return $this->db()->delete($sql, $data);
+    }
+}
