@@ -11,7 +11,7 @@ For info about editing, see: https://twig.symfony.com/doc/2.x/
 {% if count > 0 %}
 <div class="flex items-center">
 
-    <span class="mr-2 text-xxs text-gray-600">
+    <span class="mr-2 text-xxs text-gray-600 w-12">
         {{ count }} Tasks
     </span>
 
@@ -25,7 +25,7 @@ For info about editing, see: https://twig.symfony.com/doc/2.x/
             {% set percent = ((task.minutes / minutes) * 100)|round %}
             {% set taskColour = categories[task.category]|default('#ebeaea') %}
 
-            <div class="h-full border-r border-{{ colour }}-600" style="width: {{ percent }}%; background-color: {{ taskColour }};" title="{{ percent }}% {{ task.category }}"></div>
+            <div class="h-full border-{{ colour }}-600 {{ not loop.last or totalMinutes < 140 ? 'border-r' : '' }}" style="width: {{ percent }}%; background-color: {{ taskColour }};" title="{{ percent }}% {{ task.category }}: {{ task.description }}"></div>
         {% endfor %}
 
         {% if totalMinutes < 140 %}
